k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-nats-crzcommon-service
  namespace: staging-nats
  labels:
    app: nats
spec:
  selector:
    app: nats
  ports:
    - name: client-tcp
      port: 4222
      targetPort: 4222
    - name: client-ws
      port: 443
      targetPort: 443
    - name: monitor
      port: 8222
